--- a/gym_project/accounts/templates/accounts/login.html
+++ b/gym_project/accounts/templates/accounts/login.html
@@ -7,14 +7,25 @@
         <div class="card shadow">
             <div class="card-body p-5">
                 <h3 class="text-center mb-4">Connexion</h3>
+
                 <form method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Se connecter</button>
+                    <button type="submit" class="btn btn-primary w-100 mt-3">
+                        Se connecter
+                    </button>
                 </form>
-                <p class="text-center mt-3">
-                    Pas de compte ? <a href="{% url 'accounts:signup' %}">S'inscrire</a>
-                </p>
+
+                <div class="text-center mt-4">
+                    <p class="mb-2">
+                        Pas de compte ? 
+                        <a href="{% url 'accounts:signup' %}">S'inscrire</a>
+                    </p>
+                    <p class="mb-0">
+                        Mot de passe oublié ? 
+                        <a href="{% url 'accounts:password_reset' %}">Clique ici</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
